--- a/contact.css
+++ b/contact.css
@@ -5,7 +5,7 @@ nav {
     height: 100px;
 }
 
-/* Bottom right text */
+
 .text-block {
     position: absolute;
     bottom: -200px;
@@ -17,19 +17,19 @@ nav {
     margin-top: -600px;
   }
 
-/* Style inputs with type="text", select elements and textareas */
+
 input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 30px; /* Some padding */  
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 10px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: horizontal /* Allow the user to vertically resize the textarea (not horizontally) */
+    width: 100%; 
+    padding: 30px;  
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 10px; 
+    margin-bottom: 16px; 
+    resize: horizontal 
   }
   
-  /* Style the submit button with a specific background color etc */
+  
   input[type=submit] {
     background-color: rgb(5, 15, 5);
     color: white;
@@ -39,14 +39,13 @@ input[type=text], select, textarea {
     cursor: pointer;
   }
   
-  /* When moving the mouse over the submit button, add a darker green color */
+ 
   input[type=submit]:hover {
       padding: 20px;
       padding-top: 20px;
     background-color: grey;
   }
   
-  /* Add a background color and some padding around the form */
   .container {
     border-radius: 5px;
     background-color:lightgrey;
