--- a/Graphicdesign.css
+++ b/Graphicdesign.css
@@ -1,7 +1,15 @@
 img {
     border: 1px solid #ddd;
-    border-radius: 4px;
-    padding: 10px;
-    padding-top: 5;
+    border-radius: 1em;
+    padding: 1em;
+    padding-top: 100;
     padding-left: 2;
   }
+
+  body{
+    background-color:black;
+}
+
+.carousel-inner > .item > img {
+  margin: 0 auto;
+}
