--- a/About.css
+++ b/About.css
@@ -1,8 +1,3 @@
-nav {
-  width: 100%;
-  height: 100px;
-}
-
 
 .centered {
   position: absolute;
@@ -10,4 +5,10 @@ nav {
   left: 70%;
   transform: translate(-50%, -50%);
   color: white;
+ font-size: 1em;
+
 }
+img {
+  display: block;
+}
+
