--- a/contact.css
+++ b/contact.css
@@ -1,11 +1,4 @@
 
-
-nav {
-    width: 100%;
-    height: 100px;
-}
-
-
 .text-block {
     position: absolute;
     bottom: -200px;
@@ -13,19 +6,16 @@ nav {
     
   }
   
-  .img{
-    margin-top: -600px;
-  }
 
 
 input[type=text], select, textarea {
     width: 100%; 
-    padding: 30px;  
-    border: 1px solid #ccc; 
-    border-radius: 4px; 
+    padding: 3em;  
+    border: 1em solid #ccc; 
+    border-radius: 1em; 
     box-sizing: border-box; 
-    margin-top: 10px; 
-    margin-bottom: 16px; 
+    margin-top: 1em; 
+    margin-bottom: 1em; 
     resize: horizontal 
   }
   
@@ -33,24 +23,24 @@ input[type=text], select, textarea {
   input[type=submit] {
     background-color: rgb(5, 15, 5);
     color: white;
-    padding: 12px 20px;
+    padding: 1em 1em;
     border: none;
-    border-radius: 4px;
+ 
     cursor: pointer;
   }
   
  
   input[type=submit]:hover {
-      padding: 20px;
-      padding-top: 20px;
+      padding: 1em;
+      padding-top: 1em;
     background-color: grey;
   }
   
   .container {
-    border-radius: 5px;
+    border-radius: 1em;
     background-color:lightgrey;
-    padding-top: 40cm;
-    padding: 40px;
+    padding-top: 1em;
+    padding:1em;
   }
 
  
