--- a/contact.css
+++ b/contact.css
@@ -1,8 +1,9 @@
 
 .text-block {
     position: absolute;
-    bottom: -200px;
-    right: 700px;
+    bottom: 1em;
+    right: 1em;
+    left: 1em;
     
   }
   
