--- a/contact.css
+++ b/contact.css
@@ -28,8 +28,8 @@ input[type=text] {
 
 
 
-.image{
-  background-image: url(websiteimages/images/image1);
+.text-cetre{
+  color: white;
 }
 
 
@@ -49,6 +49,7 @@ input[type=text] {
 body{
   background-color: black;
 }
+
 
   
  
