--- a/About.css
+++ b/About.css
@@ -1,16 +1,23 @@
 
 
 
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 70%;
-  transform: translate(-50%, -50%);
-  color: white;
- font-size: 1em;
-
-}
 img {
   display: block;
+}
+
+.thumbnail {
+  position: relative;
+  display: inline-block;
+}
+
+.text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate( -50%, -50% );
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  font-size: 1em;
 }
 
