--- a/contact.css
+++ b/contact.css
@@ -3,26 +3,48 @@
   background-image: none;
   background-repeat: no-repeat;
  }
+
+
+
+img {
+  display: block;
+}
+
+.thumbnail {
+  position: relative;
+  display: inline-block;
+}
+
+.caption {
+  position: absolute;
+  
+transform: translate( -50%, -50% );
+  text-align: center;
+  color: white;
+  font-weight: bold;
+  font-size: 5em;
+  text-align: center;
+}
 .inputs{
-  font-family: Arial, Helvetica, sans-serif;
+
   font-weight: bold;
   text-align: cleft;
   color:white;
   background-color: transparent;
-  padding: 27px;
-  margin-left: 100px;
-  margin-right: 100px;
-  margin-top: 10px;
-  margin-bottom: 30px;
+  padding: 3em;
+  margin-left: 3em;
+  margin-right: 6em;
+  margin-top: 6em;
+  margin-bottom: 6em;
 }
 
 
 input[type=text] {
   width: 100%;
-  height: 200%;
-  padding: 12px 20px;
-  margin: 8px 0;
-  box-sizing: border-box;
+  height: 400%;
+  padding: 1em 1em;
+  margin: 1em 0;
+  
 }
 
 
@@ -40,14 +62,14 @@ input[type=text] {
 }
 
 .bg-cover {
-  color: black;  
+  color:lightblue;  
 
 }
 
 
 
 body{
-  background-color: black;
+  background-color:black;
 }
 
 
