--- a/contact.css
+++ b/contact.css
@@ -17,13 +17,13 @@ img {
 
 .caption {
   position: absolute;
-  
-transform: translate( -50%, -50% );
+  top: 50%;
+  left: 50%;
+  transform: translate( -50%, -50% );
   text-align: center;
   color: white;
   font-weight: bold;
   font-size: 5em;
-  text-align: center;
 }
 .inputs{
 
