--- a/About.css
+++ b/About.css
@@ -1,12 +1,40 @@
 
 
-a{
-  position: relative;
+
+.navbar {
+  background-color:white;
+  background-image: none;
+  background-repeat: no-repeat;
+ }
+
+
+
+ body{
+  background-color:white;
+
 }
 
-a p {
-  position: absolute;
-  top: 1em;
-  left: 1em;
+
+.nav a{
+ font-size: 6em !important;
+}
+
+.text-center{
+  font-size: 1.5em;
+padding-top: 2em;
+color: white;
+}
+
+.img-fluid{
+ 
+      width: 100%;
+      height: auto;
+  
+}
+
+
+
+body{
+  background-color:black;
 }
 
