--- a/contact.css
+++ b/contact.css
@@ -4,11 +4,16 @@
   background-repeat:no-repeat;
  }
 
+
+
 img {
   display: block;
 }
 
-
+.thumbnail {
+  position:relative;
+  display:inline-block;
+}
 
 .caption {
   position:absolute;
@@ -21,6 +26,8 @@ img {
   font-size:5em;
 }
 
+
+
 input[type=text] {
   width:100%;
   height:400%;
@@ -28,6 +35,12 @@ input[type=text] {
   margin:1em 0;
   
 }
+
+
+
+
+
+
 
 body{
   background-color:black;
